--- a/prueba/camisas.html
+++ b/prueba/camisas.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,7 +8,7 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js" integrity="sha384-SR1sx49pcuLnqZUnnPwx6FCym0wLsk5JZuNx2bPPENzswTNFaQU1RDvt3wT4gWFG" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.min.js" integrity="sha384-j0CNLUeiqtyaRmlzUHCPZ+Gy5fQu0dQ6eZ/xAww941Ai1SxSY+0EQqNXNE6DZiVc" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./style.css">
-    <title>Tienda BeeFree</title>   
+    <title>Tienda BeeFree</title>
 </head>
 <body>
     <header>
@@ -23,7 +23,7 @@
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Inicio</a>
+                    <a class="nav-link active" aria-current="page" href="./index.html">Inicio</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link disabled" href="#">Ofertas</a>
@@ -43,9 +43,9 @@
                       Iniciar sesión
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                      <li><a class="dropdown-item" href="./iniciarsesion.html">Iniciar sesión</a></li>
-                      <li><a class="dropdown-item" href="./registro.html">Registrarse</a></li>
-                    </ul>
+                        <li><a class="dropdown-item" href="./iniciarsesion.html">Iniciar sesión</a></li>
+                        <li><a class="dropdown-item" href="./registro.html">Registrarse</a></li>
+                      </ul>
                   </li>
                   
                 </ul>
@@ -55,47 +55,50 @@
                 </form>
               </div>
             </div>
-          </nav>
+        </nav>
+        <div class="claseTitulo">
+            <h1>Camisas</h1>
+        </div>
     </header>
+    
     <section>
-        <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
-            <div class="carousel-indicators">
-              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+        <div class="container">
+            <div class="row row-cols-auto">
+                <div class="col-12 col-md-4">
+                    <div class="card" style="width:auto;">
+                        <img src="./img/camisa1.jpg" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">Camisa cuadrille Amarilla</h5>
+                                <a href="#" class="btn disabled">Precio: $ 12.990</a>
+                                <a href="#" class="btn disabled">Stock: 13</a>
+                                <p class="card-text">Camisa cuadrille unisex, marca index.</p>
+                            </div>
+                    </div>
+                </div>
+                <div class="col-12 col-md-4">
+                    <div class="card" style="width:auto;">
+                        <img src="./img/camisa2.jpg" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">Camisa primaveral</h5>
+                                <a href="#" class="btn disabled">Precio: $9.990</a>
+                                <a href="#" class="btn disabled">Stock: 32</a>
+                                <p class="card-text">Camisa primaveral mujer, marca index.</p>
+                            </div>
+                    </div>
+                </div>
+                <div class="col-12 col-md-4">
+                    <div class="card" style="width:auto;">
+                        <img src="./img/camisa3.jpg" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">Camisa mezclilla</h5>
+                                <a href="#" class="btn disabled">Precio: $ 14.990</a>
+                                <a href="#" class="btn disabled">Stock: 21</a>
+                                <p class="card-text">Camisa de mezclilla hombre, marca index.  </p>
+                            </div>
+                    </div>
+                </div>
             </div>
-            <div class="carousel-inner">
-              <div class="carousel-item active">
-                <img src="./img/calzado_snoopy.jpg" class="d-block w-100" alt="...">
-                <div class="carousel-caption d-none d-md-block">
-                  <h1>Calzado Snoopy PUMA</h1>
-                  <h2><p class="precio" >PRECIO:$39.990</p></h2>
-                </div>
-              </div>
-              <div class="carousel-item">
-                <img src="./img/camisa_color.jpg" class="d-block w-100" alt="...">
-                <div class="carousel-caption d-none d-md-block">
-                  <h1>Camisas</h1>
-                  <h2><p class="precio" >PRECIO:   $9.990 c/u</p></h2>
-                </div>
-              </div>
-              <div class="carousel-item">
-                <img src="./img/jeans_modelos.jpg" class="d-block w-100" alt="...">
-                <div class="carousel-caption d-none d-md-block">
-                  <h1>MOM Jeans LEVI </h1>
-                  <h2><p class="precio">PRECIO:   $19.990</p></h2>
-                </div>
-              </div>
-            </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Next</span>
-            </button>
-          </div>
+        </div>
     </section>
 </body>
 </html>
